@@ -49,6 +49,8 @@ importFrom(methods,show)
 importFrom(plyr,.)
 importFrom(plyr,dlply)
 importFrom(qvalue,qvalue)
+importFrom(scales,cscale)
+importFrom(scales,seq_gradient_pal)
 importFrom(stats4,plot)
 importFrom(stats4,summary)
 importMethodsFrom(AnnotationDbi,exists)
